--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,10 +8,18 @@ body{
 
 .fishpic{
   display: block;
-  
+  border: solid 2px;
+  border-radius: 30%;
   width: 50%;
   float:inline-start;
 }
 .jazzPic{
   float: right;
+  border: solid 2px;
+  border-radius: 10px;
+}
+.atari{
+  width: 150px;
+  border: solid 2px;
+  border-radius: 20px;
 }
