--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,7 +4,9 @@ body{
   color: rgb(55, 6, 6);
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-
+h1{
+  text-align: center;
+}
 
 .fishpic{
   display: block;
@@ -22,5 +24,9 @@ body{
   width: 150px;
   border: solid 2px;
   border-radius: 20px;
-  float: left;
+margin-left: auto;
+}
+.occulus{
+  float: right;
+  width: 255px;
 }
