--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 body{
   background-image: linear-gradient(120deg, #4d3f12 0%, #fda085 100%);
-  font-size: large;
+  font-size: larger;
   color: rgb(55, 6, 6);
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
@@ -29,4 +29,9 @@ margin-left: auto;
 .occulus{
   float: right;
   width: 255px;
+}
+.wfrr{
+  display: flex;
+    align-items: center;
+    justify-content: center;
 }
