--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,6 +4,12 @@ body{
   color: rgb(55, 6, 6);
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+.nav{
+ text-align: center;
+}
+ul{
+  list-style-type: none;
+}
 h1{
   text-align: center;
 }
