--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,9 +6,11 @@ body{
 }
 .nav{
  text-align: center;
+ font-family: Georgia, 'Times New Roman', Times, serif;
+ 
 }
 ul{
-  list-style-type: none;
+  list-style-type:none;
 }
 h1{
   text-align: center;
@@ -30,7 +32,7 @@ h1{
   width: 150px;
   border: solid 2px;
   border-radius: 20px;
-margin-left: auto;
+  margin-left: auto;
 }
 .occulus{
   float: right;
@@ -40,4 +42,9 @@ margin-left: auto;
   display: flex;
     align-items: center;
     justify-content: center;
+}
+.btmnav{
+  width: 300px;
+  height:200px;
+  background-color: #fda085;
 }
