--- a/stylesheet.css
+++ b/stylesheet.css
@@ -41,7 +41,7 @@ h1{
   margin-left: auto;
 }
 .occulus{
-  float: right;
+  float: left;
   width: 255px;
 }
 .wfrr{
@@ -53,4 +53,11 @@ h1{
   width: 300px;
   height:200px;
   background-color: #ef7b5b;
+}
+
+.ark{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
 }
